--- a/frontend/react-movie-search/src/App.css
+++ b/frontend/react-movie-search/src/App.css
@@ -1,38 +1,32 @@
-.App {
-  text-align: center;
+*{
+  margin:0;
+  padding:0;
+}
+body{
+  background:rgb(44,44,44);
+}
+p, span, div, h1, h2, h3, h4, h5, h6, ul, li{
+  color:white;
+}
+li{
+  list-style:none;
+}
+a{
+  color:cyan;
+  text-decoration:none;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+h1, h2{
+  text-align:center;
+  padding:0.5rem 0;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.no-poster-found{
+  background:black;
+  width:300px;
+  height:444px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-weight:bold;
 }
