Remove arrows and add page number indicator

--- a/frontend/react-movie-search/src/components/MoviesList.css
+++ b/frontend/react-movie-search/src/components/MoviesList.css
@@ -1,18 +1,12 @@
 .pagination-controls{
     background:black;
     text-align:center;
-}
-.stats{
-
+    padding:1rem 0;
+    margin:1rem 0;
 }
 .all-pages{
     margin-top:0.75rem;
 }
 .all-pages span:not(:last-child)::after{
     content:" - ";
-}
-.forward-backward a{
-    font-size:30px;
-    margin:0 0.5rem;
-    color:white;
 }
